# FusionMedia

./: CMakeLists.txt  README.md
inc/: mediaplayer_dialog.h  mediaplayer_dialogbase.h  mediaplayer_icon.h  mediaplayer_plugin.h  mediaplayercontrol_icon.h  mediaplayercontrol_plugin.h  mediaplayercontrol_window.h  mediaplayercontrol_windowbase.h
src/: mediaplayer_dialog.cpp  mediaplayer_dialogbase.cpp  mediaplayer_icon.cpp  mediaplayer_plugin.cpp  mediaplayercontrol_icon.cpp  mediaplayercontrol_plugin.cpp  mediaplayercontrol_window.cpp  mediaplayercontrol_windowbase.cpp
